--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>Domki nad Jeziorem</h1>
-    <p>Prywatna posiad³oœæ, spokój i natura</p>
+    <p>Prywatna posiadÅ‚oÅ›Ä‡, spokÃ³j i natura</p>
   </header>
 
   <nav>
@@ -24,7 +24,7 @@
 
   <section id="oferta">
     <h2>Nasza oferta</h2>
-    <p>Oferujemy wynajem nowoczesnych domków letniskowych nad jeziorem, idealnych na wakacje, weekendowy wypad lub rodzinny urlop. Ka¿dy domek posiada taras z widokiem na wodê, aneks kuchenny i miejsce na ognisko.</p>
+    <p>Oferujemy wynajem nowoczesnych domkÃ³w letniskowych nad jeziorem, idealnych na wakacje, weekendowy wypad lub rodzinny urlop. KaÅ¼dy domek posiada taras z widokiem na wodÄ™, aneks kuchenny i miejsce na ognisko.</p>
   </section>
 
   <section id="galeria">
@@ -39,7 +39,7 @@
   <section id="rezerwacja">
     <h2>Rezerwacja</h2>
     <form action="#" method="post">
-      <label for="name">Imiê i nazwisko:</label>
+      <label for="name">ImiÄ™ i nazwisko:</label>
       <input type="text" id="name" name="name" required />
 
       <label for="email">Email:</label>
@@ -60,7 +60,7 @@
 
   <section id="kontakt">
     <h2>Kontakt</h2>
-    <p>Skontaktuj siê z nami, aby zarezerwowaæ pobyt:</p>
+    <p>Skontaktuj siÄ™ z nami, aby zarezerwowaÄ‡ pobyt:</p>
     <ul>
       <li>Telefon: 123-456-789</li>
       <li>Email: kontakt@domkinadjeziorem.pl</li>
